# corvex

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  RELEASE_NOTES.md  install.sh
.claude/: settings.json
.github/workflows/: rust.yml
docs/plans/: 20260401-finalize-feature-init.md  20260401-redesign-cli-flow-v020.md  20260407-release-0.3.0.md  20260618-loopback-direct-routing-rule.md  20260712-happ-subs-direct-merge.md  20260712-installer-restart-subs-url.md  20260713-stop-xray-before-proxy.md
docs/plans/completed/: 20260402-corvex-logging-system.md  20260403-unified-corvex-json-settings.md  20260618-loopback-direct-routing-rule.md  20260711-rootless-macos-proxy-osascript.md  20260712-happ-subs-direct-merge.md  20260712-installer-restart-subs-url.md  20260713-detect-service-before-stop.md  v0.2.0-redesign.md
examples/: README.md  corvex-awg.json  corvex.json
src/: config.rs  dns.rs  domain.rs  happ.rs  health.rs  jsonsubs.rs  main.rs  network.rs  port.rs  protocol.rs  proxy.rs  settings.rs  subscription.rs  traffic.rs  vless.rs  xray.rs
src/engine/: awg.rs  mod.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
