[package]
name = "xray-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
nix = { version = "0.29", features = ["signal", "process"] }
url = "2"

[dev-dependencies]
tempfile = "3"
