[package]
name = "corvex"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
nix = { version = "0.29", features = ["signal", "process"] }
url = "2"
ureq = { version = "3", features = ["socks-proxy"] }
base64 = "0.22"
rand = "0.9"
json_comments = "0.2.2"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
