[package]
name = "corvex"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
url = "2"
ureq = { version = "3", features = ["socks-proxy"] }
base64 = "0.22"
rand = "0.9"
json_comments = "0.2.2"
log = "0.4"
env_logger = "0.11"
tempfile = "3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
] }

[dev-dependencies]

[profile.release]
lto = "thin"       
strip = true      
codegen-units = 1  
